--- a/vignettes/S02-2-run_sims_frequentist.Rmd
+++ b/vignettes/S02-2-run_sims_frequentist.Rmd
@@ -283,7 +283,67 @@ write_parquet(x = gam_params_freq_tprs, sink = "data-raw/sim/results/freq/gam_pa
 
 
 ```
+#linear data
+```{r}
+# import data
+setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
+sim_dat_e1 <- read_parquet(file = "data-raw/sim/data/sim_dat_e1.parquet")
+sim_dat_e1 <- filter(sim_dat_e1, func == "linear")
 
+for( i in unique(sim_dat_e1$scenario_id)){
+  print(i)
+  sim_dat_e1_i <- filter(sim_dat_e1, scenario_id==i)
+  logname <- paste0("sim_dat_e1_freq_tprs_lin_", i, "_log")
+  start_e1 <- Sys.time()
+  sim_e1_i_results <- run_analyses_freq(sim_data = sim_dat_e1_i, logname = logname, me = FALSE, gam_type = "tprs")
+
+  saveRDS(object = sim_e1_i_results, file = paste0("data-raw/sim/results/freq/e1_freq_tprs_lin_", i, "_results.RDS"))
+  end_e1 <- Sys.time()
+  print(end_e1-start_e1)
+
+}
+
+for( i in unique(sim_dat_e1$scenario_id)){
+  print(i)
+  sim_dat_e1_i <- filter(sim_dat_e1, scenario_id==i)
+  logname <- paste0("sim_dat_e1_freq_ad_lin_", i, "_log")
+  start_e1 <- Sys.time()
+  sim_e1_i_results <- run_analyses_freq(sim_data = sim_dat_e1_i, logname = logname, me = FALSE, gam_type = "ad")
+
+  saveRDS(object = sim_e1_i_results, file = paste0("data-raw/sim/results/freq/e1_freq_ad_lin_", i, "_results.RDS"))
+  end_e1 <- Sys.time()
+  print(end_e1-start_e1)
+  
+}
+
+#lextrema_results_freq <- left_join(sim_e1_results$lextrema_results_gr, summarize(group_by(sim_dat_e1, func, param, rep, error, dup, sample_id, scenario_id), n=n()), by = "sample_id")
+
+all_freq_names_ad_lin <- list.files(path = "data-raw/sim/results/freq", full.names = TRUE, pattern = "e1_freq_ad_lin*")
+all_freq_names_tprs_lin <-list.files(path = "data-raw/sim/results/freq", full.names = TRUE, pattern = "e1_freq_tprs_lin*")
+
+all_freq_ad <- lapply(all_freq_names_ad_lin, readRDS)
+all_freq_tprs <- lapply(all_freq_names_tprs_lin, readRDS)
+
+peaktest_results_freq_ad <- bind_rows(map(all_freq_ad, "peaktest_results"))
+peaktest_results_freq_tprs <- bind_rows(map(all_freq_tprs, "peaktest_results"))
+
+lextrema_results_gr_freq_ad <- bind_rows(map(all_freq_ad, "lextrema_results_gr"))
+lextrema_results_gr_freq_tprs <- bind_rows(map(all_freq_tprs, "lextrema_results_gr"))
+
+gam_params_freq_ad <- bind_rows(map(all_freq_ad, "gam_params"))
+gam_params_freq_tprs <- bind_rows(map(all_freq_tprs, "gam_params"))
+
+write_parquet(x = peaktest_results_freq_ad, sink = "data-raw/sim/results/freq/peaktest_results_e1_freq_ad_lin.parquet")
+write_parquet(x = peaktest_results_freq_tprs, sink = "data-raw/sim/results/freq/peaktest_results_e1_freq_tprs_lin.parquet")
+
+write_parquet(x = lextrema_results_gr_freq_ad, sink = "data-raw/sim/results/freq/lextrema_results_gr_e1_freq_ad_lin.parquet")
+write_parquet(x = lextrema_results_gr_freq_tprs, sink = "data-raw/sim/results/freq/lextrema_results_gr_e1_freq_tprs_lin.parquet")
+
+write_parquet(x = gam_params_freq_ad, sink = "data-raw/sim/results/freq/gam_params_e1_freq_ad_lin.parquet")
+write_parquet(x = gam_params_freq_tprs, sink = "data-raw/sim/results/freq/gam_params_e1_freq_tprs_lin.parquet")
+
+
+```
 #getting the results. For this chunk, load the function in script S03
 ```{r}
 
@@ -341,6 +401,61 @@ e1_summary_freq_tprs <- get_results(peak_test = e1_peaktest_results_freq_tprs,
 saveRDS(e1_summary_freq_tprs, "data-raw/sim/analy_results/e1_summary_tprs_freq.RDS")
 ```
 
+```{r}
+
+if(!exists("ref_metadata_e1")){
+sim_dat_e1 <- read_parquet("data-raw/sim/data/sim_dat_e1.parquet")
+  #adding reference data
+  ref_metadata_e1 <- sim_dat_e1%>%
+    group_by(func, param, rep, error, dup, scenario_id)%>%
+    summarize(sample_id=first(sample_id))%>%
+        mutate(peak = case_when(func=="norm"~param,
+                            func == "linear"~NA))%>%
+    ungroup()
+}
+
+#Adaptive splines
+e1_peaktest_results_freq_ad <- read_parquet("data-raw/sim/results/freq/peaktest_results_e1_freq_ad_lin.parquet")
+#e1_peaktest_results_freq_ad <- full_join(ref_metadata_e1, e1_peaktest_results_freq_ad, by="sample_id")
+
+e1_lextrema_results_gr_freq_ad <- read_parquet("data-raw/sim/results/freq/lextrema_results_gr_e1_freq_ad_lin.parquet")
+e1_lextrema_results_gr_freq_ad <- full_join(ref_metadata_e1, e1_lextrema_results_gr_freq_ad, by="sample_id")
+
+e1_gam_params_freq_ad <- read_parquet("data-raw/sim/results/freq/gam_params_e1_freq_ad_lin.parquet")
+e1_gam_params_freq_ad <- full_join(ref_metadata_e1, e1_gam_params_freq_ad, by="sample_id")
+
+
+e1_summary_freq_ad <- get_results(peak_test = e1_peaktest_results_freq_ad,
+                          lextr_me =e1_lextrema_results_gr_freq_ad, 
+                          lextr_gr =  e1_lextrema_results_gr_freq_ad, 
+                          gam_params = e1_gam_params_freq_ad, 
+                          func_type_p = "norm", 
+                          func_type_np = "linear",
+                          me = FALSE)
+saveRDS(e1_summary_freq_ad, "data-raw/sim/analy_results/e1_summary_ad_freq_lin.RDS")
+
+
+#Thin-plate splines
+e1_peaktest_results_freq_tprs <- read_parquet("data-raw/sim/results/freq/peaktest_results_e1_freq_tprs_lin.parquet")
+#e1_peaktest_results_freq_tprs <- full_join(ref_metadata_e1, e1_peaktest_results_freq_tprs, by="sample_id")
+
+e1_lextrema_results_gr_freq_tprs <- read_parquet("data-raw/sim/results/freq/lextrema_results_gr_e1_freq_tprs_lin.parquet")
+e1_lextrema_results_gr_freq_tprs <- full_join(ref_metadata_e1, e1_lextrema_results_gr_freq_tprs, by="sample_id")
+
+e1_gam_params_freq_tprs <- read_parquet("data-raw/sim/results/freq/gam_params_e1_freq_tprs_lin.parquet")
+e1_gam_params_freq_tprs <- full_join(ref_metadata_e1, e1_gam_params_freq_tprs, by="sample_id")
+
+
+e1_summary_freq_tprs <- get_results(peak_test = e1_peaktest_results_freq_tprs,
+                          lextr_me =e1_lextrema_results_gr_freq_tprs, 
+                          lextr_gr =  e1_lextrema_results_gr_freq_tprs, 
+                          gam_params = e1_gam_params_freq_tprs, 
+                          func_type_p = "norm", 
+                          func_type_np = "linear",
+                          me = FALSE)
+
+saveRDS(e1_summary_freq_tprs, "data-raw/sim/analy_results/e1_summary_tprs_freq_lin.RDS")
+```
 ```{r}
 # capture_gr <- lextrema_results_freq%>%
 #     filter(func %in% "norm")%>%
