--- a/vignettes/S04-analyze_real_data.Rmd
+++ b/vignettes/S04-analyze_real_data.Rmd
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(
 library(lextremagam)
 library(mgcv)
 library(gratia)
+library(dplyr)
 knitr::opts_knit$set(root.dir = "~/Documents/Pedersen2023/Peaks/lextremagam")
 ```
 
@@ -35,6 +36,8 @@ plot(WilsonKeddy1988$n_sp~WilsonKeddy1988$ln_somc_perc)
 
 bishop2021 <- read.csv("data-raw/real_data/NBP1701_diatom_growth_rate_data_Award1543245_20220627.csv")
 plot(bishop2021$specific_growth_rate~bishop2021$temperature)
+
+Sasaki2024_comb_d <- read.csv("data-raw/real_data/Sasaki2024_comb_d.csv")
 ```
 # Halpern and Spies ####
 ```{r}
@@ -66,7 +69,7 @@ wk1988_tl <- lextremagam:::peaktest_twolines(x = WilsonKeddy1988$ln_somc_perc,
                                              y = WilsonKeddy1988$n_sp)
 #lextremagam
 wk1988_gam <- gam(n_sp~s(ln_somc_perc, bs="ad", k=20, m=3), method="REML", data=WilsonKeddy1988, family=nb)
-wk1988_lextr <- lextremagam::quantify_lextrema2(mod = wk1988_gam, 
+wk1988_lextr <- lextremagam::quantify_lextrema(mod = wk1988_gam, 
                                                  var = "ln_somc_perc", 
                                                  conf_level = 0.95, 
                                                 step_size = 0.0002,
@@ -88,19 +91,35 @@ b2021_tl <- lextremagam:::peaktest_twolines(x = bishop2021$temperature,
 bishop2021$species <- as.factor(bishop2021$species)
 b2021_gam <- gam(specific_growth_rate~s(temperature, by=species, k=5), method="REML", data=bishop2021)
 
-b2021_lextr_ac <- lextremagam::quantify_lextrema2(mod = b2021_gam, 
+b2021_lextr_ac <- lextremagam::quantify_lextrema_multivar(mod = b2021_gam, 
                                                var = "temperature", 
                                                step_size=0.015,
                                                conf_level = 0.95, 
                                                deriv_method = "gratia", 
-                                               multivariate = TRUE, 
                                                smooth = "s(temperature):speciesActinocyclus curvatulus")
 
 b2021_lextr_plot <- plot_lextrema(quant_segments = b2021_lextr_ac, plot_deriv = TRUE)
 
 
 ```
-
+#Sasaki et al. 
+Data from "Seasonally variable thermal performance curves prevent adverse effects of heatwaves" by Matthew Sasaki, Michael Finiguerra, Hans G. Dam
+11 November 2024
+https://doi-org.lib-ezproxy.concordia.ca/10.1111/1365-2656.14221
+https://github.com/ZoopEcoEvo/LIS_heatwave/blob/main/Output/Data/comb_d.csv
 ```{r}
+#one model per species per metric
+# EPR ####
+  ## tonsa ####
+    mod_epr_tons <- mgcv::gam(rate ~ s(temp, k = 5)+s(curve_id, bs="re"), 
+                        data = mutate(dplyr::filter(Sasaki2024_comb_d, metric == "EPR", species == "tonsa"), curve_id = as.factor(curve_id)), method="REML")
+  lextr_epr_tons <- lextremagam::quantify_lextrema_multivar(mod = mod_epr_tons, var = "temp", smooth ="s(temp)", conf_level = 0.95, deriv_method = "gratia", frequentist = FALSE )
+  plot_lextrema(quant_segments = lextr_epr_tons, plot_deriv = TRUE, show_segs = "local_max")
+  ## hudsonica ####
+
+
+unique(Sasaki2024_comb_d$metric)
+
+
 
 ```
