--- a/vignettes/S04-analyze_real_data.Rmd
+++ b/vignettes/S04-analyze_real_data.Rmd
@@ -42,10 +42,31 @@ hs1195w1_lextr <- lextremagam::quantify_lextrema(mod = hs1195w1_gam,
                                                  var = "t_disturbance", 
                                                  step_size = 0.02, 
                                                  conf_level = 0.95, 
-                                                 deriv_method = "gratia", frequentist = TRUE)
+                                                 deriv_method = "gratia", frequentist = FALSE)
 
 hs1195w1_lextr_plot <- plot_lextrema(quant_segments = hs1195w1_lextr, plot_deriv = TRUE)
 hs1195w1_lextr$segment_summary
+
+hs_plot <- draw(hs1195w1_gam, residuals = TRUE, rug = FALSE)+
+  geom_vline(aes(xintercept = hs1195w1_lextr$segment_summary$t_disturbance_start[2]), 
+             colour = "firebrick", linetype = 2)+
+  geom_vline(aes(xintercept = hs1195w1_lextr$segment_summary$t_disturbance_end[2]),
+             colour = "firebrick", linetype = 2)+
+  labs(x = "time since disturbance (years)", title = "")+
+  theme_bw()
+
+hs1195w1_lextr_plot$model_plot+
+  geom_point(aes(x = HalpernSpies1995_w1$t_disturbance, y =HalpernSpies1995_w1$heterogeneity), colour = "#6699cc")+
+  geom_vline(aes(xintercept = hs1195w1_lextr$segment_summary$t_disturbance_start[3]), 
+             colour = "firebrick", linetype = 2)+
+  geom_vline(aes(xintercept = hs1195w1_lextr$segment_summary$t_disturbance_end[3]),
+             colour = "firebrick", linetype = 2)+
+  labs(x = "time since disturbance (years)", title = "")
+hs1195w1_lextr_plot$deriv_plot+labs(x = "time since disturbance (years)", y = "First derivative of partial effect")+
+  geom_vline(aes(xintercept = hs1195w1_lextr$segment_summary$t_disturbance_start[3]), 
+             colour = "firebrick", linetype = 2)+
+  geom_vline(aes(xintercept = hs1195w1_lextr$segment_summary$t_disturbance_end[3]),
+             colour = "firebrick", linetype = 2)
 
 
 ```
@@ -65,6 +86,8 @@ wk1988_tl <- lextremagam:::peaktest_twolines(x = WilsonKeddy1988$ln_somc_perc,
                                              y = WilsonKeddy1988$n_sp)
 #lextremagam
 wk1988_gam <- gam(n_sp~s(ln_somc_perc, bs="ad", k=20, m=3), method="REML", data=WilsonKeddy1988, family=nb)
+
+
 wk1988_lextr <- lextremagam::quantify_lextrema(mod = wk1988_gam, 
                                                  var = "ln_somc_perc", 
                                                  conf_level = 0.95, 
@@ -73,6 +96,15 @@ wk1988_lextr <- lextremagam::quantify_lextrema(mod = wk1988_gam,
 
 wk1988_lextr_plot <- plot_lextrema(quant_segments = wk1988_lextr, plot_deriv = TRUE)
 wk1988_lextr$segment_summary
+
+wk_plot <- draw(wk1988_gam, residuals = TRUE, rug = FALSE)+
+  labs(x = "ln(% somc)", title = "")+
+  scale_y_continuous(limits = c(-6, 2))+
+  theme_bw()
+
+wk1988_lextr_plot$deriv_plot+
+  labs(x = "ln(% somc)", title = "", y = "first derivative of partial effect")+
+  scale_y_continuous(limits = c(-20, 50))
 ```
 
 
@@ -258,19 +290,52 @@ shrimp_dat <- filter(shrimp_dat, NAFO %in% c("3L", "2J", "3K"), year_surv>=2010,
 shrimp_dat$year_surv <- as.factor(shrimp_dat$year_surv)
 shrimp_dat$NAFO <- as.factor(shrimp_dat$NAFO)
 shrimp_dat$season <- as.factor(shrimp_dat$season)
+shrimp_dat_n0 <- shrimp_dat%>%
+  filter(Pandalus.borealis != 0)
 
-shrimp_gam <- gam(Pandalus.borealis ~s(depth)+s(year_surv, bs="re")+s(NAFO, bs="re")+s(lat_dec), data=shrimp_dat, method="REML")
+plot(shrimp_dat$Pandalus.borealis~shrimp_dat$depth)
 
-draw(shrimp_gam, residuals = FALSE)
+plot(log(shrimp_dat$Pandalus.borealis+0.01)~shrimp_dat$depth)
+
+#super skewed
+# shrimp_gam <- gam(Pandalus.borealis ~s(depth)+s(lat_dec)+s(year_surv, bs="re")+s(NAFO, bs="re"), data=shrimp_dat, method="REML")
+# 
+# shrimp_gam <- gam(Pandalus.borealis ~s(depth, bs = "ad", k = 20, m = 3)+s(lat_dec)+s(year_surv, bs="re")+s(NAFO, bs="re"), data=shrimp_dat, method="REML")
+
+shrimp_gam <- gam(Pandalus.borealis ~s(depth)+s(lat_dec)+s(year_surv, bs="re")+s(NAFO, bs="re"), data=shrimp_dat, method="REML", family = tw())
+
+# shrimp_dat$sqrt_depth <- sqrt(shrimp_dat$depth)
+# shrimp_gam <- gam(Pandalus.borealis ~s(sqrt_depth)+s(lat_dec)+s(year_surv, bs="re")+s(NAFO, bs="re"), data=shrimp_dat, method="REML", family = tw())
+# 
+# shrimp_gam <- gam(Pandalus.borealis ~s(depth)+s(lat_dec)+s(year_surv, bs="re")+s(NAFO, bs="re"), data=shrimp_dat_n0, method="REML", family = Gamma)
+
+appraise(shrimp_gam)
+draw(shrimp_gam, residuals = FALSE, rug = FALSE)
 
 shrimp_lextr <- lextremagam::quantify_lextrema_multivar(mod = shrimp_gam, var = "depth", 
                                                         smooth = "s(depth)", conf_level = 0.95, 
                                                         deriv_method = "gratia", frequentist = FALSE, step_size = 0.020)
 
-plot_lextrema(shrimp_lextr)
-lextremagam:::.plot_lextrema_multivar(shrimp_lextr)
+# shrimp_lextr <- lextremagam::quantify_lextrema_multivar(mod = shrimp_gam, var = "sqrt_depth", 
+#                                                         smooth = "s(sqrt_depth)", conf_level = 0.95, 
+#                                                         deriv_method = "gratia", frequentist = FALSE, step_size = 0.020)
+
+shrimp_lextr_freq <- lextremagam::quantify_lextrema_multivar(mod = shrimp_gam, var = "depth", 
+                                                        smooth = "s(depth)", conf_level = 0.95, 
+                                                        deriv_method = "gratia", frequentist = TRUE, step_size = 0.020)
+
+lextremagam::plot_lextrema(quant_segments = shrimp_lextr, plot_deriv = FALSE, show_segs = "local_max",show_segs_deriv = FALSE)
 
 shrimp_lextr$segment_summary
+shrimp_lextr_freq$segment_summary
+
+dfo_fig <- draw(shrimp_gam, residuals = FALSE, select = "s(depth)", rug = FALSE)
+dfo_fig+
+  geom_vline(aes(xintercept = shrimp_lextr$segment_summary$depth_start[2]), colour = "firebrick", linetype = 2)+
+  geom_vline(aes(xintercept = shrimp_lextr$segment_summary$depth_end[2]), colour = "firebrick", linetype = 2)+
+  scale_x_continuous(limits = c(0, 600))+
+  theme_bw()
+
 ```
 
 # Iarcella et al Feeding by temperature
